--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ subset*
 data/train_users.csv
 data/test_users.csv
 .vscode/
+data/*
+data/train_users.p
+data/test_users.p
+data/train_games.p
+data/test_games.p
+boost/bar.csv
+boost/brand.csv
+boost/curr_svd_data.csv
